--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,9 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Firebase service account keys (SENSITIVE - DO NOT COMMIT)
+*-firebase-adminsdk-*.json
+firebase-adminsdk-*.json
+.env.local
+.env
